Update underworld config