@@ -20,11 +20,11 @@ public class PLConfig extends SimpleConfigs {
     );
 
     public static final ConfigInteger effectDurationSeconds = new ConfigInteger(
-            "效果持续时间",
+            "效果持续时间(秒)",
             9999999,
             0,
             9999999,
-            "DEBUFF效果持续时间 (单位：秒)"
+            "DEBUFF效果持续时间"
     );
 
     public static final ConfigInteger yReleaseThreshold = new ConfigInteger(
@@ -59,10 +59,140 @@ public class PLConfig extends SimpleConfigs {
             "当玩家脚下方块的光照值低于此数值时视为危险的黑暗环境"
     );
 
+    public static final ConfigInteger under50_digSlowdown_amp = new ConfigInteger(
+            "挖掘疲劳",
+            1,
+            0,
+            4,
+            "挖掘疲劳效果的等级, 设置为 0 可禁用，1 表示挖掘疲劳 I"
+    );
+
+    public static final ConfigInteger under50_moveSlowdown_amp = new ConfigInteger(
+            "缓慢",
+            0,
+            0,
+            4,
+            "缓慢效果的等级, 设置为 0 可禁用，1 表示缓慢 I"
+    );
+
+    public static final ConfigInteger under50_weakness_amp = new ConfigInteger(
+            "虚弱",
+            0,
+            0,
+            4,
+            "虚弱效果的等级, 设置为 0 可禁用，1 表示虚弱 I"
+    );
+
+    public static final ConfigInteger under50_confusion_amp = new ConfigInteger(
+            "反胃",
+            0,
+            0,
+            4,
+            "反胃效果的等级, 设置为 0 可禁用"
+    );
+
+    public static final ConfigInteger under50_blindness_amp = new ConfigInteger(
+            "失明",
+            0,
+            0,
+            4,
+            "失明效果的等级, 设置为 0 可禁用"
+    );
+
+    public static final ConfigInteger under50_hunger_amp = new ConfigInteger(
+            "饥饿",
+            0,
+            0,
+            4,
+            "饥饿效果的等级, 设置为 0 可禁用"
+    );
+
+    public static final ConfigInteger under50_poison_amp = new ConfigInteger(
+            "中毒",
+            0,
+            0,
+            4,
+            "中毒效果的等级, 设置为 0 可禁用"
+    );
+
+    public static final ConfigInteger under50_wither_amp = new ConfigInteger(
+            "凋零",
+            0,
+            0,
+            4,
+            "凋零效果的等级, 设置为 0 可禁用"
+    );
+
+    public static final ConfigInteger underFull_digSlowdown_amp = new ConfigInteger(
+            "挖掘疲劳",
+            2,
+            0,
+            4,
+            "挖掘疲劳效果的等级, 设置为 0 可禁用，1 表示挖掘疲劳 I"
+    );
+
+    public static final ConfigInteger underFull_moveSlowdown_amp = new ConfigInteger(
+            "缓慢",
+            2,
+            0,
+            4,
+            "缓慢效果的等级, 设置为 0 可禁用，1 表示缓慢 I"
+    );
+
+    public static final ConfigInteger underFull_weakness_amp = new ConfigInteger(
+            "虚弱",
+            2,
+            0,
+            4,
+            "虚弱效果的等级, 设置为 0 可禁用，1 表示虚弱 I"
+    );
+
+    public static final ConfigInteger underFull_confusion_amp = new ConfigInteger(
+            "反胃",
+            0,
+            0,
+            4,
+            "反胃效果的等级, 设置为 0 可禁用"
+    );
+
+    public static final ConfigInteger underFull_blindness_amp = new ConfigInteger(
+            "失明",
+            0,
+            0,
+            4,
+            "失明效果的等级, 设置为 0 可禁用"
+    );
+
+    public static final ConfigInteger underFull_hunger_amp = new ConfigInteger(
+            "饥饿",
+            0,
+            0,
+            4,
+            "饥饿效果的等级, 设置为 0 可禁用"
+    );
+
+    public static final ConfigInteger underFull_poison_amp = new ConfigInteger(
+            "中毒",
+            0,
+            0,
+            4,
+            "中毒效果的等级, 设置为 0 可禁用"
+    );
+
+    public static final ConfigInteger underFull_wither_amp = new ConfigInteger(
+            "凋零",
+            0,
+            0,
+            4,
+            "凋零效果的等级, 设置为 0 可禁用"
+    );
+
     private static final PLConfig INSTANCE;
 
     public static final List<ConfigBase<?>> OverWorldSettings;
-    public static final List<ConfigBase<?>> UnderWorldSettings;
+    public static final List<ConfigBase<?>> Under50Settings;
+    public static final List<ConfigBase<?>> UnderFullSettings;
+    public static final List<ConfigBase<?>> UnderCommonSettings;
     public static final List<ConfigBase<?>> Total;
     public static final List<ConfigTab> tabs;
 
@@ -80,16 +210,32 @@ public class PLConfig extends SimpleConfigs {
     }
 
     static {
-        UnderWorldSettings = List.of(thresholdSeconds, effectDurationSeconds, yReleaseThreshold);
-
         OverWorldSettings = List.of(dangerThresholdSeconds, dangerDamageAmount, dangerLightThreshold);
 
+        UnderCommonSettings = List.of(thresholdSeconds, effectDurationSeconds, yReleaseThreshold);
+
+        Under50Settings = List.of(
+                under50_digSlowdown_amp, under50_moveSlowdown_amp, under50_weakness_amp,
+                under50_confusion_amp, under50_blindness_amp, under50_hunger_amp,
+                under50_poison_amp, under50_wither_amp);
+
+        UnderFullSettings = List.of(underFull_digSlowdown_amp, underFull_moveSlowdown_amp, underFull_weakness_amp,
+                underFull_confusion_amp, underFull_blindness_amp, underFull_hunger_amp,
+                underFull_poison_amp, underFull_wither_amp);
+
         List<ConfigBase<?>> total = new ArrayList<>();
-        total.addAll(UnderWorldSettings);
         total.addAll(OverWorldSettings);
+        total.addAll(UnderCommonSettings);
+        total.addAll(Under50Settings);
+        total.addAll(UnderFullSettings);
         Total = Collections.unmodifiableList(total);
 
-        tabs = List.of(new ConfigTab("主世界", OverWorldSettings), new ConfigTab("地下世界", UnderWorldSettings));
+        List<ConfigTab> t = new ArrayList<>();
+        t.add(new ConfigTab("主世界", OverWorldSettings));
+        t.add(new ConfigTab("地下世界", UnderCommonSettings));
+        t.add(new ConfigTab("地下世界 - 50%阶段", Under50Settings));
+        t.add(new ConfigTab("地下世界 - 100%阶段", UnderFullSettings));
+        tabs = Collections.unmodifiableList(t);
 
         INSTANCE = new PLConfig("防内卷", Total);
     }
@@ -116,5 +262,55 @@ public class PLConfig extends SimpleConfigs {
 
     public static int getDangerLightThreshold() {
         return Math.max(0, dangerLightThreshold.getIntegerValue());
+    }
+
+    public static int getUnder50_digSlowdown_amp() {
+        return Math.max(0, under50_digSlowdown_amp.getIntegerValue());
+    }
+    public static int getUnder50_moveSlowdown_amp() {
+        return Math.max(0, under50_moveSlowdown_amp.getIntegerValue());
+    }
+    public static int getUnder50_weakness_amp() {
+        return Math.max(0, under50_weakness_amp.getIntegerValue());
+    }
+    public static int getUnder50_confusion_amp() {
+        return Math.max(0, under50_confusion_amp.getIntegerValue());
+    }
+    public static int getUnder50_blindness_amp() {
+        return Math.max(0, under50_blindness_amp.getIntegerValue());
+    }
+    public static int getUnder50_hunger_amp() {
+        return Math.max(0, under50_hunger_amp.getIntegerValue());
+    }
+    public static int getUnder50_poison_amp() {
+        return Math.max(0, under50_poison_amp.getIntegerValue());
+    }
+    public static int getUnder50_wither_amp() {
+        return Math.max(0, under50_wither_amp.getIntegerValue());
+    }
+
+    public static int getUnderFull_digSlowdown_amp() {
+        return Math.max(0, underFull_digSlowdown_amp.getIntegerValue());
+    }
+    public static int getUnderFull_moveSlowdown_amp() {
+        return Math.max(0, underFull_moveSlowdown_amp.getIntegerValue());
+    }
+    public static int getUnderFull_weakness_amp() {
+        return Math.max(0, underFull_weakness_amp.getIntegerValue());
+    }
+    public static int getUnderFull_confusion_amp() {
+        return Math.max(0, underFull_confusion_amp.getIntegerValue());
+    }
+    public static int getUnderFull_blindness_amp() {
+        return Math.max(0, underFull_blindness_amp.getIntegerValue());
+    }
+    public static int getUnderFull_hunger_amp() {
+        return Math.max(0, underFull_hunger_amp.getIntegerValue());
+    }
+    public static int getUnderFull_poison_amp() {
+        return Math.max(0, underFull_poison_amp.getIntegerValue());
+    }
+    public static int getUnderFull_wither_amp() {
+        return Math.max(0, underFull_wither_amp.getIntegerValue());
     }
 }
